# gctk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  test.gtex  vcpkg.cmake
cmake/: FindLuaJIT.cmake
docs/: gtex.md  todo.md
example/: CMakeLists.txt
example/src/client/: client.cpp
example/src/launcher/: game.rc  main.cpp
example/src/server/: server.cpp
gctk/: CMakeLists.txt
gctk/client/: gctk_client.cpp  gctk_client.hpp  gctk_client_api.hpp  gctk_input_client.cpp  gctk_input_client.hpp  gctk_texture.cpp  gctk_texture.hpp
gctk/launcher/: gctk_launcher.hpp
gctk/server/: gctk_server.cpp  gctk_server_api.hpp
gctk/shared/: gctk.hpp  gctk_api.hpp  gctk_asset.cpp  gctk_asset.hpp  gctk_colors.hpp  gctk_cvar.cpp  gctk_cvar.hpp  gctk_debug.cpp  gctk_debug.hpp  gctk_dll.hpp  gctk_filesys.cpp  gctk_filesys.hpp  gctk_input.hpp  gctk_math.cpp  gctk_math.hpp  gctk_paths.cpp  gctk_paths.hpp  gctk_str.cpp  gctk_str.hpp  gctk_time.cpp  gctk_time.hpp  gctk_version.cpp  gctk_version.hpp
include/gctk/: bithelper.h  collections.h  common.h  debug.h  filesys.h  game.h  gctk.h  input.h  math.h  str.h
include/gctk/lua/: lua_handler.h
include/gctk/rendering/: mesh.h  render_common.h  render_queue.h  shader.h  sprite.h  texture.h  viewport.h
include/gctk/stb/: stb_image.h
shaders/: gctk_animated_sprite.fsh  gctk_animated_sprite.vsh  gctk_sprite2d.fsh  shaders.txt  square.fsh  square.vsh
src/: gctk_bithelper.c  gctk_collections.c  gctk_debug.c  gctk_filesys.c  gctk_game.c  gctk_input.c  gctk_math.c  gctk_str.c
src/rendering/: gctk_mesh.c  gctk_render_common.c  gctk_render_queue.c  gctk_shader.c  gctk_sprite.c  gctk_texture.c  gctk_viewport.c
src/test/: inputs.cfg  main.c
submodules/: CMakeLists.txt
tools/: CMakeLists.txt
tools/GTexTools/: CMakeLists.txt  main.cpp  textureloader.cpp  ui.cpp
tools/gpkg/: main.cpp
tools/gtex_tool/: CMakeLists.txt  main.cpp
